Don't apply relative offset when element is not relative positioned

Bug: 769980
Change-Id: Ibb010a3a2ca834471e35ee8d54e5bc5b65f5176f