third_party/WebKit/Source/core/layout/api/LineLayoutItem.h
@@ -254,6 +254,8 @@ class LineLayoutItem {
     return layout_object_->IsInFlowPositioned();
   }
 
+  bool IsRelPositioned() const { return layout_object_->IsRelPositioned(); }
+
   // TODO(dgrogan/eae): Can we change this to GlobalToLocal and vice versa
   // instead of having 4 methods? See localToAbsoluteQuad below.
   PositionWithAffinity PositionForPoint(const LayoutPoint& point) {
